<resources>
    <string name="app_name">KOdev</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="login_button">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="register_button">Register</string>
    <string name="language_button">RU</string>
    <string name="exit_button">Exit</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_resetpassword">Reset password</string>
    <string name="send_instructions_button">Send instructions</string>
    <string name="infoForResetPassword_text">Enter your email address to receive a password reset link.</string>
    <string name="registration_text">Registration</string>
    <string name="profile_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="payment_method_text">Payment method</string>
    <string name="home_menu_text">Home</string>
    <string name="order_menu_text">Order</string>
    <string name="notification_menu_text">Notifications</string>
    <string name="save_button">Save</string>
    <string name="nameText">Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="user_not_authorized">The user is not logged in</string>
    <string name="error_user_data">User data error</string>
    <string name="error_account_not_found">Account not found</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="logout_title">Log out of your account</string>
    <string name="logout_message">You will be logged out</string>
    <string name="error_load_data">Data upload error</string>
    <string name="logout_confirmation">Are you sure you want to get out?</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">Еnglish</string>
    <string name="personal_data">Personal data</string>
    <string name="app_settings">App Settings</string>
    <string name="theme">Theme</string>
    <string name="system_theme">System theme</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="personal_data_saved">Personal data saved</string>
    <string name="error_saving_data">Error saving data</string>
    <string name="settings_saved_restart">Setting saved after restart</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="model_description">3D Model description</string>
    <string name="attach_files">Attach files</string>
    <string name="select_file">Select file</string>
    <string name="your_contacts">Your contacts</string>
    <string name="send_order">Send order</string>
    <string name="login_to_autofill">Log in to fill in the contacts automatically.</string>
    <string name="selected_file">The file is selected</string>
    <string name="error_description_required">Enter a description of the model</string>
    <string name="error_contacts_required">Enter your contact information</string>
    <string name="error_file_required">Attach the drawing file</string>
    <string name="order_success">The order has been successfully sent!</string>
    <string name="order_error">Sending error: %s</string>
    <string name="order_success_title">The order has been sent</string>
    <string name="order_success_message">Your order for a 3D model has been successfully sent. We will contact you shortly.</string>
    <string name="clear_notifications">Clear</string>
</resources>